[package]
authors      = ["sharks <sharks@sharks>"]
description  = "bit level serialization/deserialization proc-macro for structs"
edition      = "2021"
license      = "MIT OR Apache-2.0"
name         = "deku_derive"
readme       = "../README.md"
repository   = "https://github.com/sharksforarms/deku"
rust-version = "1.71"
version      = "0.17.0"

[lib]
proc-macro = true

[features]
# Enable features which require allocation
alloc = []
# Enable compatibility with the `log` crate
logging = []
# # https://github.com/sharksforarms/deku/pull/405
no-assert-string = []
# Enable features which require stdlib
std = ["proc-macro-crate"]

[dependencies]
darling          = "0.20"
proc-macro-crate = { version = "3.1.0", optional = true }
proc-macro2      = "1.0"
quote            = "1.0"
syn              = "2.0"

[dev-dependencies]
rstest = { workspace = true }
