[package]
name = "deku-ensure-no-std"
version = "0.1.0"
authors = ["sharks <sharks@sharks>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true


[features]
default = ["alloc"]
alloc = []

[dependencies]
cortex-m-rt = "0.7.3"
deku = { path = "../deku", default-features = false, features = ["alloc"] }
embedded-alloc = "0.5.1"

