[package]
authors      = ["sharks <sharks@sharks>"]
categories   = ["encoding", "parsing", "no-std"]
description  = "bit level serialization/deserialization proc-macro for structs"
edition      = "2021"
keywords     = ["deku", "bits", "serialization", "deserialization", "struct"]
license      = "MIT OR Apache-2.0"
name         = "deku"
readme       = "README.md"
repository   = "https://github.com/sharksforarms/deku"
rust-version = "1.71"
version      = "0.17.0"

[lib]
bench = false

[features]
default = ["std"]
# Enable features which require stdlib
std = ["alloc", "bitvec/std", "deku_derive/std", "log?/std", "no_std_io/std"]
# Enable features which require an allocator
alloc = ["bitvec/alloc", "deku_derive/alloc", "no_std_io/alloc"]

# Enable compatibility with the `log` crate
logging = ["deku_derive/logging", "log"]

# https://github.com/sharksforarms/deku/pull/405
no-assert-string = ["deku_derive/no-assert-string"]

[dependencies]
bitvec      = { version = "1.0.1", default-features = false }
deku_derive = { version = "^0.17.0", path = "../deku-derive", default-features = false }
log         = { version = "0.4.21", optional = true }
no_std_io   = { version = "0.6.0", default-features = false }
rustversion = "1.0.16"

[dev-dependencies]
alloc_counter = "0.0.4"
assert_hex    = "0.4.1"
criterion     = "0.5.1"
env_logger    = "0.11.3"
hexlit        = "0.5.5"
once_cell     = "1.19.0"
rstest        = { workspace = true }
rustc-hash    = "1.1.0"
trybuild      = "1.0.95"

[[bench]]
harness = false
name    = "deku"
